Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45032

TextEdit verticalAlignment broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.5.0 Beta
    • 5.4.1
    • None
    • OS X 10.10
      Ubuntu 14.10
    • 067a01bc76b76599aa696d867018c1e060ff30c6

    Description

      When using TextEdit with verticalAlignment set to AlignBottom or AlignVCenter, it squashes lines into one after a while.

      import QtQuick 2.4
      
      TextEdit {
          width: 100
          height: 100
          verticalAlignment: TextEdit.AlignVCenter
      }
      

      The screenshots explain better:

      Attachments

        1. Screen Shot 2015-03-17 at 09.30.44.png
          20 kB
          Roman Pasechnik
        2. Screen Shot 2015-03-17 at 09.31.18.png
          19 kB
          Roman Pasechnik

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              esabraha Eskil Abrahamsen Blomfeldt
              beemaster Roman Pasechnik
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes