src/quick/items/qquicktextedit.cpp
@@ -1834,6 +1834,10 @@ QSGNode *QQuickTextEdit::updatePaintNode(QSGNode *oldNode, UpdatePaintNodeData *
         int currentNodeSize = 0;
         int nodeStart = firstDirtyPos;
         QPointF basePosition(d->xoff, d->yoff);
+        QMatrix4x4 basePositionMatrix;
+        basePositionMatrix.translate(basePosition.x(), basePosition.y());
+        rootNode->setMatrix(basePositionMatrix);
+
         QPointF nodeOffset;
         TextNode *firstCleanNode = (nodeIterator != d->textNodeMap.end()) ? *nodeIterator : 0;
 
@@ -1844,7 +1848,6 @@ QSGNode *QQuickTextEdit::updatePaintNode(QSGNode *oldNode, UpdatePaintNodeData *
             QTextFrame *textFrame = frames.takeFirst();
             frames.append(textFrame->childFrames());
             rootNode->frameDecorationsNode->m_engine->addFrameDecorations(d->document, textFrame);
-
 
             if (textFrame->lastPosition() < firstDirtyPos || (firstCleanNode && textFrame->firstPosition() >= firstCleanNode->startPos()))
                 continue;
@@ -1866,7 +1869,7 @@ QSGNode *QQuickTextEdit::updatePaintNode(QSGNode *oldNode, UpdatePaintNodeData *
                 nodeOffset =  d->document->documentLayout()->frameBoundingRect(textFrame).topLeft();
                 updateNodeTransform(node, nodeOffset);
                 while (!it.atEnd())
-                    node->m_engine->addTextBlock(d->document, (it++).currentBlock(), basePosition - nodeOffset, d->color, QColor(), selectionStart(), selectionEnd() - 1);
+                    node->m_engine->addTextBlock(d->document, (it++).currentBlock(), -nodeOffset, d->color, QColor(), selectionStart(), selectionEnd() - 1);
                 nodeStart = textFrame->firstPosition();
             } else {
                 // Having nodes spanning across frame boundaries will break the current bookkeeping mechanism. We need to prevent that.
@@ -1889,7 +1892,7 @@ QSGNode *QQuickTextEdit::updatePaintNode(QSGNode *oldNode, UpdatePaintNodeData *
                         nodeStart = block.position();
                     }
 
-                    node->m_engine->addTextBlock(d->document, block, basePosition - nodeOffset, d->color, QColor(), selectionStart(), selectionEnd() - 1);
+                    node->m_engine->addTextBlock(d->document, block, -nodeOffset, d->color, QColor(), selectionStart(), selectionEnd() - 1);
                     currentNodeSize += block.length();
 
                     if ((it.atEnd()) || (firstCleanNode && block.next().position() >= firstCleanNode->startPos())) // last node that needed replacing or last block of the frame
@@ -1933,7 +1936,7 @@ QSGNode *QQuickTextEdit::updatePaintNode(QSGNode *oldNode, UpdatePaintNodeData *
     if (d->cursorComponent == 0 && !isReadOnly()) {
         QSGRectangleNode* cursor = 0;
         if (d->cursorVisible && d->control->cursorOn())
-            cursor = d->sceneGraphContext()->createRectangleNode(cursorRectangle(), d->color);
+            cursor = d->sceneGraphContext()->createRectangleNode(d->control->cursorRect(), d->color);
         rootNode->resetCursorNode(cursor);
     }
 
